@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2021/12/24 16:07:12 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2021/12/24 16:08:52 wiz Exp $
 #
 DISTNAME=	# empty
 PKGNAME=	${PYPKGPREFIX}-tryton-platform-${TRYTON_BASEVER}
@@ -117,7 +117,6 @@ DEPENDS+=	${PYPKGPREFIX}-trytond-stock-package-shipping-ups>=${TRYTON_BASEVER}:.
 DEPENDS+=	${PYPKGPREFIX}-trytond-stock-product-location>=${TRYTON_BASEVER}:../../misc/py-trytond-stock-product-location
 DEPENDS+=	${PYPKGPREFIX}-trytond-stock-split>=${TRYTON_BASEVER}:../../misc/py-trytond-stock-split
 DEPENDS+=	${PYPKGPREFIX}-trytond-authentication-sms>=${TRYTON_BASEVER}:../../security/py-trytond-authentication-sms
-DEPENDS+=	${PYPKGPREFIX}-trytond-calendar>=${TRYTON_BASEVER}:../../time/py-trytond-calendar
 DEPENDS+=	${PYPKGPREFIX}-trytond-company-work-time>=${TRYTON_BASEVER}:../../time/py-trytond-company-work-time
 DEPENDS+=	${PYPKGPREFIX}-trytond-timesheet-cost>=${TRYTON_BASEVER}:../../time/py-trytond-timesheet-cost
 DEPENDS+=	${PYPKGPREFIX}-trytond-timesheet>=${TRYTON_BASEVER}:../../time/py-trytond-timesheet
