@@ -1,1 +1,0 @@
-The calendar module of the Tryton application platform.
