@@ -1,71 +1,0 @@
-@comment $NetBSD: PLIST,v 1.4 2016/12/04 21:13:08 rodent Exp $
-${PYSITELIB}/trytond/modules/calendar/__init__.py
-${PYSITELIB}/trytond/modules/calendar/__init__.pyc
-${PYSITELIB}/trytond/modules/calendar/__init__.pyo
-${PYSITELIB}/trytond/modules/calendar/caldav.py
-${PYSITELIB}/trytond/modules/calendar/caldav.pyc
-${PYSITELIB}/trytond/modules/calendar/caldav.pyo
-${PYSITELIB}/trytond/modules/calendar/calendar.xml
-${PYSITELIB}/trytond/modules/calendar/calendar_.py
-${PYSITELIB}/trytond/modules/calendar/calendar_.pyc
-${PYSITELIB}/trytond/modules/calendar/calendar_.pyo
-${PYSITELIB}/trytond/modules/calendar/locale/bg.po
-${PYSITELIB}/trytond/modules/calendar/locale/ca.po
-${PYSITELIB}/trytond/modules/calendar/locale/cs.po
-${PYSITELIB}/trytond/modules/calendar/locale/de.po
-${PYSITELIB}/trytond/modules/calendar/locale/es.po
-${PYSITELIB}/trytond/modules/calendar/locale/es_419.po
-${PYSITELIB}/trytond/modules/calendar/locale/fr.po
-${PYSITELIB}/trytond/modules/calendar/locale/hu_HU.po
-${PYSITELIB}/trytond/modules/calendar/locale/it_IT.po
-${PYSITELIB}/trytond/modules/calendar/locale/ja_JP.po
-${PYSITELIB}/trytond/modules/calendar/locale/lo.po
-${PYSITELIB}/trytond/modules/calendar/locale/lt.po
-${PYSITELIB}/trytond/modules/calendar/locale/nl.po
-${PYSITELIB}/trytond/modules/calendar/locale/pl.po
-${PYSITELIB}/trytond/modules/calendar/locale/pt_BR.po
-${PYSITELIB}/trytond/modules/calendar/locale/ru.po
-${PYSITELIB}/trytond/modules/calendar/locale/sl.po
-${PYSITELIB}/trytond/modules/calendar/locale/zh_CN.po
-${PYSITELIB}/trytond/modules/calendar/res.py
-${PYSITELIB}/trytond/modules/calendar/res.pyc
-${PYSITELIB}/trytond/modules/calendar/res.pyo
-${PYSITELIB}/trytond/modules/calendar/tests/__init__.py
-${PYSITELIB}/trytond/modules/calendar/tests/__init__.pyc
-${PYSITELIB}/trytond/modules/calendar/tests/__init__.pyo
-${PYSITELIB}/trytond/modules/calendar/tests/scenario_calendar.py
-${PYSITELIB}/trytond/modules/calendar/tests/scenario_calendar.pyc
-${PYSITELIB}/trytond/modules/calendar/tests/scenario_calendar.pyo
-${PYSITELIB}/trytond/modules/calendar/tests/test_calendar.py
-${PYSITELIB}/trytond/modules/calendar/tests/test_calendar.pyc
-${PYSITELIB}/trytond/modules/calendar/tests/test_calendar.pyo
-${PYSITELIB}/trytond/modules/calendar/tryton.cfg
-${PYSITELIB}/trytond/modules/calendar/view/attendee_form.xml
-${PYSITELIB}/trytond/modules/calendar/view/attendee_tree.xml
-${PYSITELIB}/trytond/modules/calendar/view/calendar_form.xml
-${PYSITELIB}/trytond/modules/calendar/view/calendar_tree.xml
-${PYSITELIB}/trytond/modules/calendar/view/category_form.xml
-${PYSITELIB}/trytond/modules/calendar/view/category_tree.xml
-${PYSITELIB}/trytond/modules/calendar/view/event_form.xml
-${PYSITELIB}/trytond/modules/calendar/view/event_tree.xml
-${PYSITELIB}/trytond/modules/calendar/view/event_tree_occurence.xml
-${PYSITELIB}/trytond/modules/calendar/view/exdate_form.xml
-${PYSITELIB}/trytond/modules/calendar/view/exdate_tree.xml
-${PYSITELIB}/trytond/modules/calendar/view/exrule_form.xml
-${PYSITELIB}/trytond/modules/calendar/view/exrule_tree.xml
-${PYSITELIB}/trytond/modules/calendar/view/location_form.xml
-${PYSITELIB}/trytond/modules/calendar/view/location_tree.xml
-${PYSITELIB}/trytond/modules/calendar/view/rdate_form.xml
-${PYSITELIB}/trytond/modules/calendar/view/rdate_tree.xml
-${PYSITELIB}/trytond/modules/calendar/view/rrule_form.xml
-${PYSITELIB}/trytond/modules/calendar/view/rrule_tree.xml
-${PYSITELIB}/trytond/modules/calendar/webdav.py
-${PYSITELIB}/trytond/modules/calendar/webdav.pyc
-${PYSITELIB}/trytond/modules/calendar/webdav.pyo
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
