@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.8 2021/10/26 11:24:35 nia Exp $
-
-BLAKE2s (tryton-4.2/trytond_calendar-4.2.0.tar.gz) = 7fd20b6c5a3390ba104f590e30de48cd7c8c1f9b8c5bafe59e2fc5a6b70e8fcf
-SHA512 (tryton-4.2/trytond_calendar-4.2.0.tar.gz) = e6e1de51c206d4dffac684f7c3279623d407b331bc101398d92c33616a105d4f0672072711eff546bc5d33bd88b5f07c30514b1f12e12084b27e64c34e77ba84
-Size (tryton-4.2/trytond_calendar-4.2.0.tar.gz) = 66409 bytes
