@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2021,v 1.6381 2021/12/24 16:07:12 wiz Exp $
+$NetBSD: CHANGES-2021,v 1.6382 2021/12/24 16:08:52 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2021:
 
@@ -9542,3 +9542,4 @@ Changes to the packages collection and infrastructure in 2021:
 	Removed time/py-trytond-calendar-todo [wiz 2021-12-24]
 	Removed time/py-trytond-calendar-scheduling [wiz 2021-12-24]
 	Removed time/py-trytond-calendar-classification [wiz 2021-12-24]
+	Removed time/py-trytond-calendar [wiz 2021-12-24]
